kubernetes-manifests/haproxy/haproxy-prod-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      run: haproxy-ingress
  template:
    metadata:
      labels:
        run: haproxy-ingress
    spec:
      serviceAccountName: haproxy-ingress
      volumes:
      - name: secret-mount
        secret:
           secretName: star-lmj-pem
      - name: digisecret-mount
        secret:
           secretName: star-digitransit-pem
      - name: haconfig
        configMap: 
           name: haproxy-config
      containers:
      - name: haproxy
        image: haproxy
        ports:
        - name: http
          containerPort: 80
        - name: websocketsecure
          containerPort: 8443
        - name: https
          containerPort: 443
        - name: stat
          containerPort: 1936
        - name: mqtt-public
          containerPort: 1883
        - name: mqtt-testing
          containerPort: 8883
        volumeMounts:
        - name: secret-mount
          mountPath: "/etc/ssl/private/lmj"
          readOnly: true
        - name: digisecret-mount
          mountPath: "/etc/ssl/private/digitransit"
          readOnly: true
        - name: haconfig
          mountPath: "/usr/local/etc/haproxy"
          readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  namespace: default
spec:
  ports:
  - port: 8080
    name: virtualmonitor  
  - port: 1883
    name: mqtt-public
    targetPort: 1883  
#    protocol: TCP
  - port: 8443
    name: websocketsecure 
  - port: 8883
    name: mqtt-tls
    targetPort: 8883
  - port: 80
    name: websocket
#    targetPort: 8083
  - port: 443
    name: secwebsocket
#    targetPort: 8083   
  loadBalancerIP: 13.95.195.91  
  type: LoadBalancer
  selector:
    run: haproxy-ingress
---
#apiVersion: extensions/v1beta1 #TODO change to networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
##  name: app
#spec:
#  tls:
#   - hosts:
#     - dev-mqtt.lmj.fi
#     - tremonitori.digitransit.fi
#     secretName: tls-sceret
#     secretName: digitransit-secret
#  rules:
#    - host: dev-mqtt.lmj.fi
#      http:
#        paths:
#      - path: /
#          - backend:
#              serviceName: emqx
#              servicePort: 8083  
#    - host: tremonitori.digitransit.fi
#      http: 
#        paths:
#      - path: /
#          - backend:
#              serviceName: tampere-virtualmonitor-service
#              servicePort: 3000
